// Copyright 2020 Zhenhua Yang
// Licensed under the MIT License.

syntax = "proto3";

package com.huaouo.stormy.rpc;

option java_multiple_files = true;

message ManageTopologyRequest {

    enum RequestType {
        START_TOPOLOGY = 0;
        STOP_TOPOLOGY = 1;
        QUERY_RUNNING_TOPOLOGY = 2;
    }

    RequestType request_type = 1;
    string topology_name = 2;
    bytes jar_bytes = 3;
}

message ManageTopologyResponse {

    string message = 1;
}

service ManageTopology {

    rpc ManageTopology (ManageTopologyRequest) returns (ManageTopologyResponse) {
    }
}

message ProvideJarRequest {
    string topology_name = 1;
}

message ProvideJarResponse {
    bytes jar_bytes = 1;

    // Error message, should only be set when error occurs
    string message = 2;
}

service ProvideJar {

    rpc ProvideJar (ProvideJarRequest) returns (ProvideJarResponse) {
    }
}
